; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_padlock-aes.c_cbc_crypt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_padlock-aes.c_cbc_crypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cword = type { i32 }

@cbc_fetch_bytes = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, i32*, %struct.cword*, i32)* @cbc_crypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @cbc_crypt(i32* %0, i32* %1, i32* %2, i32* %3, %struct.cword* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.cword*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store %struct.cword* %4, %struct.cword** %12, align 8
  store i32 %5, i32* %13, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = call i64 @offset_in_page(i32* %14)
  %16 = load i64, i64* @cbc_fetch_bytes, align 8
  %17 = add nsw i64 %15, %16
  %18 = load i64, i64* @PAGE_SIZE, align 8
  %19 = icmp sgt i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %6
  %24 = load i32*, i32** %8, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = load i32*, i32** %11, align 8
  %28 = load %struct.cword*, %struct.cword** %12, align 8
  %29 = load i32, i32* %13, align 4
  %30 = call i32* @cbc_crypt_copy(i32* %24, i32* %25, i32* %26, i32* %27, %struct.cword* %28, i32 %29)
  store i32* %30, i32** %7, align 8
  br label %39

31:                                               ; preds = %6
  %32 = load i32*, i32** %8, align 8
  %33 = load i32*, i32** %9, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = load i32*, i32** %11, align 8
  %36 = load %struct.cword*, %struct.cword** %12, align 8
  %37 = load i32, i32* %13, align 4
  %38 = call i32* @rep_xcrypt_cbc(i32* %32, i32* %33, i32* %34, i32* %35, %struct.cword* %36, i32 %37)
  store i32* %38, i32** %7, align 8
  br label %39

39:                                               ; preds = %31, %23
  %40 = load i32*, i32** %7, align 8
  ret i32* %40
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @offset_in_page(i32*) #1

declare dso_local i32* @cbc_crypt_copy(i32*, i32*, i32*, i32*, %struct.cword*, i32) #1

declare dso_local i32* @rep_xcrypt_cbc(i32*, i32*, i32*, i32*, %struct.cword*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
